syntax = "proto3";
package file;

option go_package = "./filesync";

message FileListRequest {}

message FileMetadata {
  int32 id = 1; // First id
  string filename = 2;
  string filehash = 3; // Second id
  // Maybe some date here
}

message FileListMetadata { repeated FileMetadata list = 1; }

message FileListResponse { map<int32, FileListMetadata> files = 1; }

// See how to have timeouts for rpc
message FileResponse {
  FileMetadata meta = 1;
  bytes chunk = 2; // Chunk size max of 1 Mb
  bool done = 3;
}

service FileSync {
  rpc FileList(FileListRequest) returns (FileListResponse) {}
  rpc FileDownload(FileMetadata) returns (stream FileResponse) {}
}
